Horrible dpkg lock workarounds.

--- a/aws_heartbeat/roles/heartbeat/tasks/main.yml
+++ b/aws_heartbeat/roles/heartbeat/tasks/main.yml
@@ -1,3 +1,6 @@
+- name: wait for automatic system updates
+  shell: while pgrep unattended; do sleep 5; done;
+  
 - name: install AWS CLI
   apt:
     pkg: awscli
