--- a/aws_heartbeat/site.yml
+++ b/aws_heartbeat/site.yml
@@ -1,4 +1,10 @@
 ---
+#
+# The contents of this file are Copyright (c) 2019. HAProxy Technologies. All Rights Reserved.
+#
+# This file is subject to the terms and conditions defined in
+# file 'LICENSE.txt', which is part of this source code package.
+#
 # Playbook is used to configure HAPEE LBs and Web nodes
 
 - name: require 2.6+ minimum Ansible version due to EC2 EIP facter
