--- a/aws_heartbeat/site.yml
+++ b/aws_heartbeat/site.yml
@@ -3,7 +3,7 @@
 # The contents of this file are Copyright (c) 2019. HAProxy Technologies. All Rights Reserved.
 #
 # This file is subject to the terms and conditions defined in
-# file 'LICENSE.txt', which is part of this source code package.
+# file 'LICENSE', which is part of this source code package.
 #
 # Playbook is used to configure HAPEE LBs and Web nodes
 
